add first css part and some modification to index.html(no hover atm)

--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
       <li><a href="">Gmail</a></li>
       <li><a href="">Images</a></li>
       <li class="icon1"><a href=""><i class="fas fa-th fa-1x"></i></a></li>
-      <li class="icon2"><a href=""><i class="fas fa-bell fa-1x"></i></a></li>
+      <li class="icon2"><a href=""><i class="fas fa-bell "></i></a></li>
       <li class="account"><a href="">P</a></li>
     </ul>
   </nav>
   <div class="image">
     <img src="logo.png" alt="logo_google">
   </div>
-  <textarea name="monmessage" id="monmessage" rows="1" cols="60"/></textarea>
+  <textarea name="monmessage" id="monmessage" rows="1" cols="50"/></textarea>
   <div class="button">
-    <div class="research">
+    <a href=""><div class="research">
       <p>Recherche Google</p>
-    </div>
-    <div class="chance">
+    </div></a>
+    <a href=""><div class="chance">
       <p>J'ai de la chance</p>
-    </div>
+    </div></a>
   </div>
   <div class="pays">
     <p>France</p>
@@ -41,7 +41,7 @@
         <li><a href="">À propos</a></li>
       </ul>
     </div>
-    <div clas="f_right">
+    <div class="f_right">
       <ul>
         <li><a href="">Info consommateurs</a></li>
         <li><a href="">Confidentialité</a></li>
