--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <title>google_page</title>
+  <title>Google</title>
 </head>
 <body>
   <nav>
@@ -21,7 +21,7 @@
   <div class="image">
     <img src="logo.png" alt="logo_google">
   </div>
-  <textarea name="monmessage" id="monmessage" rows="1" cols="50"/></textarea>
+  <input type="text" placeholder="" name="textarea" id="textarea" required/>
   <div class="button">
     <a href=""><div class="research">
       <p>Recherche Google</p>
